--- a/src/index.css
+++ b/src/index.css
@@ -42,7 +42,7 @@ body {
     /* background-image: url(https://images.pexels.com/photos/176851/pexels-photo-176851.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2); */
 }
 
- /* ======= GENERAL STYLES */
+ /* ======= GENERAL STYLES ============= */
 
  .container {
     width: var(--container-width-lg);
@@ -108,10 +108,9 @@ body {
 
  img {
     display: block;
-    width: 30%;
-    height: 30%;
+    width: 70%;
+    height: 70%;
     object-fit: cover;
-    
  }
 
 /* ======= MEDIA QUERIES (MEDIUM DEVICES)   */
