--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,7 +1,7 @@
 header {
     height: 200vh;
     padding-top: 7rem;
-    /* overflow: hidden; */
+    overflow: hidden;
 }
 
 .header__container {
@@ -49,4 +49,16 @@ header {
     /* border-radius: 12rem 12rem 0 0; */
     overflow: hidden;
     /* padding: 2rem; */
+}
+
+/* =============SCROLL DOWN ==============*/
+
+.scroll__down {
+    position: absolute;
+    right: -2.3rem;
+    bottom: 5rem;
+    transform: rotate(90deg);
+    font-weight: 300;
+    font-size: 0.9rem;
+
 }
