--- a/src/index.css
+++ b/src/index.css
@@ -49,7 +49,11 @@ body {
     margin: 0 auto;
  }
 
- h1, h2, h3, h4, h5 {
+ h1, 
+ h2, 
+ h3, 
+ h4, 
+ h5 {
     font-weight: 500;
  }
 
@@ -59,9 +63,11 @@ body {
 
  section {
     margin-top: 8rem;
+    height: 100vh;
  }
 
- section > h2, section > h5 {
+ section > h2, 
+ section > h5 {
     text-align: center;
     color: var(--color-light);
  }
