--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -1,8 +1,10 @@
-.portfolio__container {
+.portfolio_container {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 2.5rem;
+    /* grid-template-columns: 95% 25%; */
+    grid-template-columns: repeat(2, 1fr);
+    /* column-gap: 5px; */
+    column-gap: 5px;
+    gap: 10%; 
 }
 
 .portfolio__item {
@@ -19,10 +21,10 @@
     background: transparent;
 }
 
-.portfolio__item-image {
+/* .portfolio__item-image {
     border-radius: 1.5rem;
     overflow: hidden;
-}
+} */
 
 .portfolio__item h3 {
     margin: 1.2rem 0 2rem;
