--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -13,7 +13,7 @@
     border-radius: 2rem;
     border: 1px solid transparent;
     transition: var(--transition);
-    margin-bottom: 0.8rem;
+    /* margin-bottom: 0.8rem; */
 }
 
 .portfolio__item:hover {
@@ -34,7 +34,6 @@
     display: flex;
     gap: 1rem;
     margin-bottom: 1rem;
-
 }
 
 /* =============MEDIA QUERIES (MEDIUM DEVICES) ==============*/
